# gibsgraph

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PENDING.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: streamlit_demo.py
data/: .gitignore  README.md  review_best_practices.csv  review_modeling_patterns.csv
data/scripts/: add_curated_data.py  add_grounded_records.py  audit_expert_data.py  build_attack_pairs.py  build_construction_pairs.py  build_dora_pairs.py  build_expert_nl_pairs.py  build_gleif_pairs.py  build_hetionet_pairs.py  build_mica_pairs.py  build_nis2_pairs.py  build_nl_graph_pairs.py  build_training_pairs.py  eval_vestio_graph.py  fetch_eurlex.py  fix_expert_data.py  generate_cypher_load.py  generate_embeddings.py  load_embeddings.py  load_expert_graph.py  load_via_docker.py  parse_cypher_docs.py  parse_modeling_docs.py  validate_expert_graph.py  validate_training_pairs.py
docs/: GIBSGRAPH_EXPLAINED.md
examples/: regulatory_kg.py
src/gibsgraph/: __init__.py  _graph.py  agent.py  cli.py  config.py  expert.py
src/gibsgraph/core/: __init__.py
src/gibsgraph/data/: best_practices.jsonl  cypher_clauses.jsonl  cypher_examples.jsonl  cypher_functions.jsonl  modeling_patterns.jsonl
src/gibsgraph/gnn/: __init__.py  g_retriever.py
src/gibsgraph/kg_builder/: __init__.py  builder.py
src/gibsgraph/retrieval/: __init__.py  pcst_pruner.py  retriever.py
src/gibsgraph/tools/: __init__.py  cypher_validator.py  visualizer.py
src/gibsgraph/training/: __init__.py  models.py  prompts.py  scorer.py  validator.py
tests/: conftest.py
tests/fixtures/: golden_schemas.py
tests/integration/: test_agent_integration.py
tests/stress/: run_stress_test.py
tests/stress/results/: latest.json
tests/unit/: test_agent.py  test_agent_state.py  test_builder.py  test_config.py  test_cypher_validator.py  test_expert.py  test_graph_facade.py  test_pcst_pruner.py  test_retriever.py  test_visualizer.py
tests/unit/test_training/: test_models.py  test_properties.py  test_scorer.py  test_validator.py
