[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gibsgraph"
version = "0.3.5"
description = "GraphRAG + LangGraph agent for intelligent knowledge graph reasoning over Neo4j"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Victor Gibson", email = "victor@gibs.dev" }]
keywords = ["neo4j", "graphrag", "langgraph", "knowledge-graph", "llm", "gnn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "neo4j>=5.26",
    "langgraph>=0.2.5",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "neo4j-graphrag[all]>=1.0.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
mistral = [
    "langchain-mistralai>=0.2.0",
]
gnn = [
    "torch>=2.4.0",
    "torch-geometric>=2.6.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "pcst-fast>=1.0.7",
]
ui = [
    "streamlit>=1.39.0",
    "pyvis>=0.3.2",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
]
full = ["gibsgraph[gnn,ui,dev]"]

[project.urls]
Homepage = "https://github.com/gibbrdev/gibsgraph"
Documentation = "https://gibbrdev.github.io/gibsgraph"
Repository = "https://github.com/gibbrdev/gibsgraph"
"Bug Tracker" = "https://github.com/gibbrdev/gibsgraph/issues"
Changelog = "https://github.com/gibbrdev/gibsgraph/blob/main/CHANGELOG.md"

[project.scripts]
gibsgraph = "gibsgraph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gibsgraph"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "S", "ANN"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=gibsgraph --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/gibsgraph"]
omit = ["*/tests/*"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
